// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sinteticki golden korpus (stabilan rezultat enginea) > stabilan rezultat: fpzg-diplomski-uskladjen 1`] = `
{
  "checks": [
    {
      "category": "formatting",
      "detail": "Times New Roman (100% analiziranog teksta)",
      "earned": 8,
      "max": 8,
      "status": "pass",
      "title": "Dominantni font",
    },
    {
      "category": "formatting",
      "detail": "12 pt",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Veličina osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "1.50",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Prored osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Informativno: brojčane margine nisu potvrđene kao obvezno pravilo za ovaj profil",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Margine dokumenta",
    },
    {
      "category": "formatting",
      "detail": "both",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Poravnanje osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Sve očitane sekcije koriste A4 ili veličina nije eksplicitno zapisana",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Format stranice A4",
    },
    {
      "category": "structure",
      "detail": "6 naslova prepoznato",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Hijerarhija naslova",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni naslovi dublji od 4 razine",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Dubina decimalnog numeriranja",
    },
    {
      "category": "structure",
      "detail": "Sadržaj ili TOC polje je pronađeno",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Sadržaj dokumenta",
    },
    {
      "category": "structure",
      "detail": "PAGE polje nije pronađeno",
      "earned": 0,
      "max": 4,
      "status": "pass",
      "title": "Brojevi stranica",
    },
    {
      "category": "structure",
      "detail": "Format brojeva sekcija nije eksplicitno zapisan",
      "earned": 2,
      "max": 4,
      "status": "warn",
      "title": "Shema numeriranja stranica",
    },
    {
      "category": "structure",
      "detail": "Uvod, zaključak i literatura su prepoznati",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Osnovni dijelovi rada",
    },
    {
      "category": "structure",
      "detail": "Nije prepoznato: izjava o autorstvu",
      "earned": 6,
      "max": 7,
      "status": "warn",
      "title": "Dijelovi verificiranog profila",
    },
    {
      "category": "structure",
      "detail": "11.104 riječi (glavni tekst od Uvoda do Literature + 0 riječi u fusnotama); profil: 10.000–12.000",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Profilni opseg riječi",
    },
    {
      "category": "structure",
      "detail": "Uvod približno 15.1% · Zaključak približno 15.1% glavnog opsega",
      "earned": 2,
      "max": 4,
      "status": "warn",
      "title": "Omjer Uvoda i Zaključka",
    },
    {
      "category": "structure",
      "detail": "Mogu nedostajati: Sveučilište u Zagrebu, Fakultet političkih znanosti, Zagreb i godina, vrsta rada, mentor",
      "earned": 2,
      "max": 4,
      "status": "warn",
      "title": "Elementi naslovne stranice",
    },
    {
      "category": "structure",
      "detail": "7 zahtjeva nije moguće pouzdano provjeriti bez Wordova prijeloma stranica i stručnog pregleda",
      "earned": 3,
      "max": 3,
      "status": "warn",
      "title": "Zahtjevi za ručnu završnu provjeru",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni očiti ručno oblikovani naslovi",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Uporaba Word stilova naslova",
    },
    {
      "category": "citations",
      "detail": "Nije prepoznata nijedna autor–godina citatnica",
      "earned": 1,
      "max": 3,
      "status": "warn",
      "title": "Prepoznate citatnice",
    },
    {
      "category": "citations",
      "detail": "Sve prepoznate citatnice imaju podudaranje",
      "earned": 10,
      "max": 10,
      "status": "pass",
      "title": "Citirano → literatura",
    },
    {
      "category": "citations",
      "detail": "1 izvora bez pronađene citatnice",
      "earned": 6,
      "max": 7,
      "status": "warn",
      "title": "Literatura → citirano",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očito nepotpuni zapisi",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Potpunost bibliografskih zapisa",
    },
    {
      "category": "citations",
      "detail": "Nisu prepoznati izravni citati s autor–godina citatnicom",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Lokator uz izravne citate",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađene očite nestandardne kombinacije autora, godine i lokatora",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Dosljednost interpunkcije citatnica",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očiti nerazlučeni duplikati autor–godina",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Isti autor i godina (a/b/c)",
    },
    {
      "category": "citations",
      "detail": "1 prepoznatih zapisa; profil traži najmanje 15",
      "earned": 2.2,
      "max": 5,
      "status": "warn",
      "title": "Minimalan broj izvora profila",
    },
    {
      "category": "citations",
      "detail": "Datumi pristupa su pronađeni gdje se očekuju",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Datumi pristupa mrežnim izvorima",
    },
    {
      "category": "elements",
      "detail": "0 tablica · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi tablica",
    },
    {
      "category": "elements",
      "detail": "0 grafičkih elemenata · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi slika i grafikona",
    },
    {
      "category": "elements",
      "detail": "Potrebni popisi su pronađeni ili nema elemenata",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Popisi slika i tablica",
    },
    {
      "category": "elements",
      "detail": "Nisu pronađene očito neispravne poveznice",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Oblik poveznica",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 praznih odlomaka (0%)",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Prazni odlomci",
    },
  ],
  "issues": [
    {
      "category": "structure",
      "detail": "Provjeriti vanjsku i unutarnju naslovnu stranicu prema službenom predlošku FPZG-a. • Prednje stranice trebaju imati rimske brojeve, a glavni tekst arapske brojeve od prve stranice Uvoda. • Sažetak treba biti u jednom odlomku, bez citatnica, a ključne riječi navedene neposredno uz njega. • Najviše četiri razine decimalnog numeriranja naslova. • Svaka slika, grafikon i tablica trebaju imati naslov i izvor; kada postoje, potreban je i odgovarajući popis ilustracija. • Posebne upute mentora, nositelja kolegija ili studijskog programa imaju prednost kada su izričito zadane. • Među najmanje 15 klasičnih znanstvenih izvora trebaju biti najmanje tri knjige.",
      "severity": "info",
      "title": "Ručna završna provjera verificiranog profila",
      "where": "Službene upute",
    },
    {
      "category": "structure",
      "detail": "Provjeri zaglavlja i podnožja te umetni Word PAGE polje.",
      "severity": "error",
      "title": "Nisu pronađeni automatski brojevi stranica",
      "where": "",
    },
    {
      "category": "structure",
      "detail": "Aktualne FPZG upute traže rimske brojeve na prednjim stranicama i arapske brojeve od prve stranice Uvoda, počevši od 1. U starijem prihvaćenom radu pronađena je arapska numeracija prednjih stranica, ali taj presedan ne mijenja službeno pravilo.",
      "severity": "warning",
      "title": "Provjeri rimsku i arapsku numeraciju",
      "where": "Sekcije dokumenta",
    },
    {
      "category": "structure",
      "detail": "izjava o autorstvu",
      "severity": "warning",
      "title": "Nedostaju mogući obvezni dijelovi verificiranog profila",
      "where": "Struktura rada",
    },
    {
      "category": "structure",
      "detail": "Uvod je preporučeno ograničiti na približno 10%, a Zaključak na približno 5–10% ukupnog teksta. Automatska procjena ovisi o pravilnim Heading stilovima.",
      "severity": "warning",
      "title": "Omjer Uvoda ili Zaključka odstupa od FPZG smjernice",
      "where": "Struktura rada",
    },
    {
      "category": "structure",
      "detail": "Nisu pouzdano prepoznati: Sveučilište u Zagrebu, Fakultet političkih znanosti, Zagreb i godina, vrsta rada, mentor. Vizualni raspored treba provjeriti ručno prema predlošku.",
      "severity": "warning",
      "title": "Naslovna stranica možda nije potpuna",
      "where": "Prva stranica",
    },
    {
      "category": "citations",
      "detail": "Dokument možda nema citatnica ili zapis odstupa od očekivanog obrasca. Provjeri ručno.",
      "severity": "info",
      "title": "Nisu prepoznate autor–godina citatnice",
      "where": "",
    },
    {
      "category": "citations",
      "detail": "Kasapović 2014",
      "severity": "warning",
      "title": "Neki izvori iz literature nisu pronađeni u tekstu",
      "where": "",
    },
    {
      "category": "citations",
      "detail": "Prepoznato je 1, a profil traži najmanje 15. Provjeri je li popis literature pravilno prepoznat.",
      "severity": "warning",
      "title": "Moguće premalo izvora prema verificiranom profilu",
      "where": "Literatura",
    },
  ],
  "profile": "FPZG · diplomska Politologija · diplomski rad",
  "profileFingerprint": null,
  "profileStatus": "verified",
  "score": 88,
  "stats": {
    "characters": 73498,
    "citations": 0,
    "dominantFont": "Times New Roman",
    "dominantFootnoteFont": null,
    "dominantFootnoteSize": null,
    "dominantFootnoteSpacing": null,
    "dominantSize": "12",
    "dominantSpacing": "1.5",
    "footnoteMarkers": 0,
    "footnoteWords": 0,
    "footnotes": 0,
    "headings": 6,
    "images": 0,
    "officialChars": null,
    "officialWords": 11104,
    "paragraphs": 194,
    "references": 1,
    "sections": 1,
    "storedPages": null,
    "tables": 0,
    "tocEntries": 0,
    "words": 11132,
  },
}
`;

exports[`Sinteticki golden korpus (stabilan rezultat enginea) > stabilan rezultat: fpzg-doktorski-margine 1`] = `
{
  "checks": [
    {
      "category": "formatting",
      "detail": "Times New Roman (100% analiziranog teksta)",
      "earned": 8,
      "max": 8,
      "status": "pass",
      "title": "Dominantni font",
    },
    {
      "category": "formatting",
      "detail": "12 pt",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Veličina osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "1.50",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Prored osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Sve 1 sekcije približno odgovaraju profilu",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Margine dokumenta",
    },
    {
      "category": "formatting",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Informativno: poravnanje nije potvrđeno kao obvezno pravilo za ovaj profil",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Poravnanje osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Sve očitane sekcije koriste A4 ili veličina nije eksplicitno zapisana",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Format stranice A4",
    },
    {
      "category": "structure",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 7 naslova prepoznato",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Hijerarhija naslova",
    },
    {
      "category": "structure",
      "detail": "Sadržaj ili TOC polje je pronađeno",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Sadržaj dokumenta",
    },
    {
      "category": "structure",
      "detail": "PAGE polje nije pronađeno",
      "earned": 0,
      "max": 4,
      "status": "pass",
      "title": "Brojevi stranica",
    },
    {
      "category": "structure",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Uvod, zaključak i literatura su prepoznati",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Osnovni dijelovi rada",
    },
    {
      "category": "structure",
      "detail": "Prepoznati su svi automatizirano provjerljivi dijelovi profila",
      "earned": 7,
      "max": 7,
      "status": "pass",
      "title": "Dijelovi verificiranog profila",
    },
    {
      "category": "structure",
      "detail": "8 zahtjeva nije moguće pouzdano provjeriti bez Wordova prijeloma stranica i stručnog pregleda",
      "earned": 3,
      "max": 3,
      "status": "warn",
      "title": "Zahtjevi za ručnu završnu provjeru",
    },
    {
      "category": "structure",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Nisu pronađeni očiti ručno oblikovani naslovi",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Uporaba Word stilova naslova",
    },
    {
      "category": "citations",
      "detail": "Nije prepoznata nijedna autor–godina citatnica",
      "earned": 1,
      "max": 3,
      "status": "warn",
      "title": "Prepoznate citatnice",
    },
    {
      "category": "citations",
      "detail": "Sve prepoznate citatnice imaju podudaranje",
      "earned": 10,
      "max": 10,
      "status": "pass",
      "title": "Citirano → literatura",
    },
    {
      "category": "citations",
      "detail": "1 izvora bez pronađene citatnice",
      "earned": 6,
      "max": 7,
      "status": "warn",
      "title": "Literatura → citirano",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očito nepotpuni zapisi",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Potpunost bibliografskih zapisa",
    },
    {
      "category": "citations",
      "detail": "Nisu prepoznati izravni citati s autor–godina citatnicom",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Lokator uz izravne citate",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađene očite nestandardne kombinacije autora, godine i lokatora",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Dosljednost interpunkcije citatnica",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očiti nerazlučeni duplikati autor–godina",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Isti autor i godina (a/b/c)",
    },
    {
      "category": "citations",
      "detail": "Datumi pristupa su pronađeni gdje se očekuju",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Datumi pristupa mrežnim izvorima",
    },
    {
      "category": "elements",
      "detail": "0 tablica · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi tablica",
    },
    {
      "category": "elements",
      "detail": "0 grafičkih elemenata · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi slika i grafikona",
    },
    {
      "category": "elements",
      "detail": "Nisu pronađene očito neispravne poveznice",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Oblik poveznica",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 praznih odlomaka (0%)",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Prazni odlomci",
    },
  ],
  "issues": [
    {
      "category": "structure",
      "detail": "DR.SC.-08: sve se stranice numeriraju od Uvoda, broj u donjem desnom kutu. • DR.SC.-08: naslovnice i korice imaju margine 3,0 cm; Naziv sastavnice i ime Arial 16, naslov rada Arial 22 bold, vrsta rada Arial 16, Zagreb i godina Arial 14. • DR.SC.-08: nazivi poglavlja velikim podebljanim slovima, potpoglavlja malim slovima. • DR.SC.-08: obvezan sažetak na jednoj kartici te prošireni strukturirani sažetak na hrvatskom i engleskom (do 10 stranica). • DR.SC.-08: tablice imaju broj i naslov iznad, slike broj i naslov ispod; izvor se navodi neposredno ispod ilustracije. • DR.SC.-08: životopis u trećem licu, najviše 1800 znakova, s popisom objavljenih radova. • Citatni stil prema dominantnoj literaturi struke (npr. harvardski ili oksfordski); za politologiju autor-godina. • Posebne upute mentora i aktualni pravilnik doktorskog studija imaju prednost kada su izričito zadani.",
      "severity": "info",
      "title": "Ručna završna provjera verificiranog profila",
      "where": "Službene upute",
    },
    {
      "category": "structure",
      "detail": "Provjeri zaglavlja i podnožja te umetni Word PAGE polje.",
      "severity": "error",
      "title": "Nisu pronađeni automatski brojevi stranica",
      "where": "",
    },
    {
      "category": "citations",
      "detail": "Dokument možda nema citatnica ili zapis odstupa od očekivanog obrasca. Provjeri ručno.",
      "severity": "info",
      "title": "Nisu prepoznate autor–godina citatnice",
      "where": "",
    },
    {
      "category": "citations",
      "detail": "Kasapović 2014",
      "severity": "warning",
      "title": "Neki izvori iz literature nisu pronađeni u tekstu",
      "where": "",
    },
  ],
  "profile": "FPZG · doktorski studij Politologija · doktorski rad",
  "profileFingerprint": null,
  "profileStatus": "verified",
  "score": 93,
  "stats": {
    "characters": 13746,
    "citations": 0,
    "dominantFont": "Times New Roman",
    "dominantFootnoteFont": null,
    "dominantFootnoteSize": null,
    "dominantFootnoteSpacing": null,
    "dominantSize": "12",
    "dominantSpacing": "1.5",
    "footnoteMarkers": 0,
    "footnoteWords": 0,
    "footnotes": 0,
    "headings": 7,
    "images": 0,
    "officialChars": null,
    "officialWords": null,
    "paragraphs": 45,
    "references": 1,
    "sections": 1,
    "storedPages": null,
    "tables": 0,
    "tocEntries": 0,
    "words": 2078,
  },
}
`;

exports[`Sinteticki golden korpus (stabilan rezultat enginea) > stabilan rezultat: fpzg-zavrsni-neuskladjen 1`] = `
{
  "checks": [
    {
      "category": "formatting",
      "detail": "Arial (100% analiziranog teksta)",
      "earned": 1,
      "max": 8,
      "status": "fail",
      "title": "Dominantni font",
    },
    {
      "category": "formatting",
      "detail": "14 pt",
      "earned": 1,
      "max": 6,
      "status": "fail",
      "title": "Veličina osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Prored nije eksplicitno zapisan",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Prored osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Informativno: brojčane margine nisu potvrđene kao obvezno pravilo za ovaj profil",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Margine dokumenta",
    },
    {
      "category": "formatting",
      "detail": "left",
      "earned": 2,
      "max": 4,
      "status": "warn",
      "title": "Poravnanje osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "1 sekcija odstupa od A4",
      "earned": 1,
      "max": 3,
      "status": "warn",
      "title": "Format stranice A4",
    },
    {
      "category": "structure",
      "detail": "0 naslova prepoznato",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Hijerarhija naslova",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni naslovi dublji od 4 razine",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Dubina decimalnog numeriranja",
    },
    {
      "category": "structure",
      "detail": "Sadržaj nije pronađen",
      "earned": 0,
      "max": 5,
      "status": "pass",
      "title": "Sadržaj dokumenta",
    },
    {
      "category": "structure",
      "detail": "PAGE polje nije pronađeno",
      "earned": 0,
      "max": 4,
      "status": "pass",
      "title": "Brojevi stranica",
    },
    {
      "category": "structure",
      "detail": "Format brojeva sekcija nije eksplicitno zapisan",
      "earned": 2,
      "max": 4,
      "status": "warn",
      "title": "Shema numeriranja stranica",
    },
    {
      "category": "structure",
      "detail": "Nije prepoznato: intro, conclusion, refs",
      "earned": 1,
      "max": 6,
      "status": "warn",
      "title": "Osnovni dijelovi rada",
    },
    {
      "category": "structure",
      "detail": "Nije prepoznato: sadržaj, uvod, zaključak, literatura, sažetak / abstract, ključne riječi / keywords",
      "earned": 1,
      "max": 7,
      "status": "warn",
      "title": "Dijelovi verificiranog profila",
    },
    {
      "category": "structure",
      "detail": "41 riječi (cijeli dokument + 0 riječi u fusnotama); profil: 5.000–6.000",
      "earned": 2,
      "max": 5,
      "status": "warn",
      "title": "Profilni opseg riječi",
    },
    {
      "category": "structure",
      "detail": "Uvod približno 0.0% · Zaključak približno 0.0% glavnog opsega",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Omjer Uvoda i Zaključka",
    },
    {
      "category": "structure",
      "detail": "Mogu nedostajati: Sveučilište u Zagrebu, Fakultet političkih znanosti, Zagreb i godina, vrsta rada",
      "earned": 2,
      "max": 4,
      "status": "warn",
      "title": "Elementi naslovne stranice",
    },
    {
      "category": "structure",
      "detail": "7 zahtjeva nije moguće pouzdano provjeriti bez Wordova prijeloma stranica i stručnog pregleda",
      "earned": 3,
      "max": 3,
      "status": "warn",
      "title": "Zahtjevi za ručnu završnu provjeru",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni očiti ručno oblikovani naslovi",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Uporaba Word stilova naslova",
    },
    {
      "category": "citations",
      "detail": "Nije prepoznata nijedna autor–godina citatnica",
      "earned": 1,
      "max": 3,
      "status": "warn",
      "title": "Prepoznate citatnice",
    },
    {
      "category": "citations",
      "detail": "Sve prepoznate citatnice imaju podudaranje",
      "earned": 10,
      "max": 10,
      "status": "pass",
      "title": "Citirano → literatura",
    },
    {
      "category": "citations",
      "detail": "Svi strukturirano prepoznati izvori pojavljuju se u tekstu",
      "earned": 7,
      "max": 7,
      "status": "pass",
      "title": "Literatura → citirano",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očito nepotpuni zapisi",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Potpunost bibliografskih zapisa",
    },
    {
      "category": "citations",
      "detail": "Nisu prepoznati izravni citati s autor–godina citatnicom",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Lokator uz izravne citate",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađene očite nestandardne kombinacije autora, godine i lokatora",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Dosljednost interpunkcije citatnica",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očiti nerazlučeni duplikati autor–godina",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Isti autor i godina (a/b/c)",
    },
    {
      "category": "citations",
      "detail": "Datumi pristupa su pronađeni gdje se očekuju",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Datumi pristupa mrežnim izvorima",
    },
    {
      "category": "elements",
      "detail": "0 tablica · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi tablica",
    },
    {
      "category": "elements",
      "detail": "0 grafičkih elemenata · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi slika i grafikona",
    },
    {
      "category": "elements",
      "detail": "Potrebni popisi su pronađeni ili nema elemenata",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Popisi slika i tablica",
    },
    {
      "category": "elements",
      "detail": "Nisu pronađene očito neispravne poveznice",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Oblik poveznica",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 praznih odlomaka (0%)",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Prazni odlomci",
    },
  ],
  "issues": [
    {
      "category": "structure",
      "detail": "Provjeriti vanjsku i unutarnju naslovnu stranicu prema službenom predlošku FPZG-a. • Prednje stranice trebaju imati rimske brojeve, a glavni tekst arapske brojeve od prve stranice Uvoda. • Sažetak treba biti u jednom odlomku, bez citatnica, a ključne riječi navedene neposredno uz njega. • Najviše četiri razine decimalnog numeriranja naslova. • Svaka slika, grafikon i tablica trebaju imati naslov i izvor; kada postoje, potreban je i odgovarajući popis ilustracija. • Posebne upute mentora, nositelja kolegija ili studijskog programa imaju prednost kada su izričito zadane. • Minimalan broj i vrstu izvora potvrditi s mentorom jer aktualna odluka za završni rad ne propisuje jedinstveni minimum.",
      "severity": "info",
      "title": "Ručna završna provjera verificiranog profila",
      "where": "Službene upute",
    },
    {
      "category": "formatting",
      "detail": "Pronađen je Arial, a profil očekuje Times New Roman.",
      "severity": "error",
      "title": "Dominantni font ne odgovara profilu",
      "where": "",
    },
    {
      "category": "formatting",
      "detail": "Dominantna veličina je 14 pt; očekivano: 12 pt.",
      "severity": "error",
      "title": "Veličina osnovnog teksta odstupa",
      "where": "",
    },
    {
      "category": "formatting",
      "detail": "Odabrani profil očekuje obostrano poravnanje odlomaka.",
      "severity": "warning",
      "title": "Osnovni tekst nije dominantno obostrano poravnat",
      "where": "",
    },
    {
      "category": "formatting",
      "detail": "Provjeri Page Size / Veličina papira u Wordu.",
      "severity": "warning",
      "title": "Format stranice možda nije A4",
      "where": "",
    },
    {
      "category": "structure",
      "detail": "Dodaj automatski sadržaj u Wordu i ažuriraj ga prije predaje.",
      "severity": "error",
      "title": "Nije pronađen sadržaj",
      "where": "",
    },
    {
      "category": "structure",
      "detail": "Provjeri zaglavlja i podnožja te umetni Word PAGE polje.",
      "severity": "error",
      "title": "Nisu pronađeni automatski brojevi stranica",
      "where": "",
    },
    {
      "category": "structure",
      "detail": "Aktualne FPZG upute traže rimske brojeve na prednjim stranicama i arapske brojeve od prve stranice Uvoda, počevši od 1. U starijem prihvaćenom radu pronađena je arapska numeracija prednjih stranica, ali taj presedan ne mijenja službeno pravilo.",
      "severity": "warning",
      "title": "Provjeri rimsku i arapsku numeraciju",
      "where": "Sekcije dokumenta",
    },
    {
      "category": "structure",
      "detail": "Nedostaje ili nije jasno naslovljeno: intro, conclusion, refs.",
      "severity": "warning",
      "title": "Nisu prepoznati svi osnovni dijelovi rada",
      "where": "",
    },
    {
      "category": "structure",
      "detail": "sadržaj, uvod, zaključak, literatura, sažetak / abstract, ključne riječi / keywords",
      "severity": "warning",
      "title": "Nedostaju mogući obvezni dijelovi verificiranog profila",
      "where": "Struktura rada",
    },
    {
      "category": "structure",
      "detail": "Broj je izračunat prema pravilima odabranog profila koliko je moguće iz strukture DOCX-a. U Wordu dodatno potvrdi Word Count i granice dijelova rada.",
      "severity": "warning",
      "title": "Broj riječi je izvan raspona odabranog profila",
      "where": "Opseg rada",
    },
    {
      "category": "structure",
      "detail": "Nisu pouzdano prepoznati: Sveučilište u Zagrebu, Fakultet političkih znanosti, Zagreb i godina, vrsta rada. Vizualni raspored treba provjeriti ručno prema predlošku.",
      "severity": "warning",
      "title": "Naslovna stranica možda nije potpuna",
      "where": "Prva stranica",
    },
    {
      "category": "citations",
      "detail": "Dokument možda nema citatnica ili zapis odstupa od očekivanog obrasca. Provjeri ručno.",
      "severity": "info",
      "title": "Nisu prepoznate autor–godina citatnice",
      "where": "",
    },
  ],
  "profile": "FPZG · prijediplomska Politologija · završni rad",
  "profileFingerprint": null,
  "profileStatus": "verified",
  "score": 67,
  "stats": {
    "characters": 292,
    "citations": 0,
    "dominantFont": "Arial",
    "dominantFootnoteFont": null,
    "dominantFootnoteSize": null,
    "dominantFootnoteSpacing": null,
    "dominantSize": "14",
    "dominantSpacing": null,
    "footnoteMarkers": 0,
    "footnoteWords": 0,
    "footnotes": 0,
    "headings": 0,
    "images": 0,
    "officialChars": null,
    "officialWords": 41,
    "paragraphs": 5,
    "references": 0,
    "sections": 1,
    "storedPages": null,
    "tables": 0,
    "tocEntries": 0,
    "words": 41,
  },
}
`;

exports[`Sinteticki golden korpus (stabilan rezultat enginea) > stabilan rezultat: fpzg-zavrsni-uskladjen 1`] = `
{
  "checks": [
    {
      "category": "formatting",
      "detail": "Times New Roman (100% analiziranog teksta)",
      "earned": 8,
      "max": 8,
      "status": "pass",
      "title": "Dominantni font",
    },
    {
      "category": "formatting",
      "detail": "12 pt",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Veličina osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "1.50",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Prored osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Informativno: brojčane margine nisu potvrđene kao obvezno pravilo za ovaj profil",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Margine dokumenta",
    },
    {
      "category": "formatting",
      "detail": "both",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Poravnanje osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Sve očitane sekcije koriste A4 ili veličina nije eksplicitno zapisana",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Format stranice A4",
    },
    {
      "category": "structure",
      "detail": "6 naslova prepoznato",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Hijerarhija naslova",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni naslovi dublji od 4 razine",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Dubina decimalnog numeriranja",
    },
    {
      "category": "structure",
      "detail": "Sadržaj ili TOC polje je pronađeno",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Sadržaj dokumenta",
    },
    {
      "category": "structure",
      "detail": "PAGE polje nije pronađeno",
      "earned": 0,
      "max": 4,
      "status": "pass",
      "title": "Brojevi stranica",
    },
    {
      "category": "structure",
      "detail": "Format brojeva sekcija nije eksplicitno zapisan",
      "earned": 2,
      "max": 4,
      "status": "warn",
      "title": "Shema numeriranja stranica",
    },
    {
      "category": "structure",
      "detail": "Uvod, zaključak i literatura su prepoznati",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Osnovni dijelovi rada",
    },
    {
      "category": "structure",
      "detail": "Prepoznati su svi automatizirano provjerljivi dijelovi profila",
      "earned": 7,
      "max": 7,
      "status": "pass",
      "title": "Dijelovi verificiranog profila",
    },
    {
      "category": "structure",
      "detail": "5.824 riječi (glavni tekst od Uvoda do Literature + 0 riječi u fusnotama); profil: 5.000–6.000",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Profilni opseg riječi",
    },
    {
      "category": "structure",
      "detail": "Uvod približno 15.5% · Zaključak približno 15.5% glavnog opsega",
      "earned": 2,
      "max": 4,
      "status": "warn",
      "title": "Omjer Uvoda i Zaključka",
    },
    {
      "category": "structure",
      "detail": "Mogu nedostajati: Sveučilište u Zagrebu, Fakultet političkih znanosti, Zagreb i godina, vrsta rada",
      "earned": 2,
      "max": 4,
      "status": "warn",
      "title": "Elementi naslovne stranice",
    },
    {
      "category": "structure",
      "detail": "7 zahtjeva nije moguće pouzdano provjeriti bez Wordova prijeloma stranica i stručnog pregleda",
      "earned": 3,
      "max": 3,
      "status": "warn",
      "title": "Zahtjevi za ručnu završnu provjeru",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni očiti ručno oblikovani naslovi",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Uporaba Word stilova naslova",
    },
    {
      "category": "citations",
      "detail": "Nije prepoznata nijedna autor–godina citatnica",
      "earned": 1,
      "max": 3,
      "status": "warn",
      "title": "Prepoznate citatnice",
    },
    {
      "category": "citations",
      "detail": "Sve prepoznate citatnice imaju podudaranje",
      "earned": 10,
      "max": 10,
      "status": "pass",
      "title": "Citirano → literatura",
    },
    {
      "category": "citations",
      "detail": "1 izvora bez pronađene citatnice",
      "earned": 6,
      "max": 7,
      "status": "warn",
      "title": "Literatura → citirano",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očito nepotpuni zapisi",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Potpunost bibliografskih zapisa",
    },
    {
      "category": "citations",
      "detail": "Nisu prepoznati izravni citati s autor–godina citatnicom",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Lokator uz izravne citate",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađene očite nestandardne kombinacije autora, godine i lokatora",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Dosljednost interpunkcije citatnica",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očiti nerazlučeni duplikati autor–godina",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Isti autor i godina (a/b/c)",
    },
    {
      "category": "citations",
      "detail": "Datumi pristupa su pronađeni gdje se očekuju",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Datumi pristupa mrežnim izvorima",
    },
    {
      "category": "elements",
      "detail": "0 tablica · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi tablica",
    },
    {
      "category": "elements",
      "detail": "0 grafičkih elemenata · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi slika i grafikona",
    },
    {
      "category": "elements",
      "detail": "Potrebni popisi su pronađeni ili nema elemenata",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Popisi slika i tablica",
    },
    {
      "category": "elements",
      "detail": "Nisu pronađene očito neispravne poveznice",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Oblik poveznica",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 praznih odlomaka (0%)",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Prazni odlomci",
    },
  ],
  "issues": [
    {
      "category": "structure",
      "detail": "Provjeriti vanjsku i unutarnju naslovnu stranicu prema službenom predlošku FPZG-a. • Prednje stranice trebaju imati rimske brojeve, a glavni tekst arapske brojeve od prve stranice Uvoda. • Sažetak treba biti u jednom odlomku, bez citatnica, a ključne riječi navedene neposredno uz njega. • Najviše četiri razine decimalnog numeriranja naslova. • Svaka slika, grafikon i tablica trebaju imati naslov i izvor; kada postoje, potreban je i odgovarajući popis ilustracija. • Posebne upute mentora, nositelja kolegija ili studijskog programa imaju prednost kada su izričito zadane. • Minimalan broj i vrstu izvora potvrditi s mentorom jer aktualna odluka za završni rad ne propisuje jedinstveni minimum.",
      "severity": "info",
      "title": "Ručna završna provjera verificiranog profila",
      "where": "Službene upute",
    },
    {
      "category": "structure",
      "detail": "Provjeri zaglavlja i podnožja te umetni Word PAGE polje.",
      "severity": "error",
      "title": "Nisu pronađeni automatski brojevi stranica",
      "where": "",
    },
    {
      "category": "structure",
      "detail": "Aktualne FPZG upute traže rimske brojeve na prednjim stranicama i arapske brojeve od prve stranice Uvoda, počevši od 1. U starijem prihvaćenom radu pronađena je arapska numeracija prednjih stranica, ali taj presedan ne mijenja službeno pravilo.",
      "severity": "warning",
      "title": "Provjeri rimsku i arapsku numeraciju",
      "where": "Sekcije dokumenta",
    },
    {
      "category": "structure",
      "detail": "Uvod je preporučeno ograničiti na približno 10%, a Zaključak na približno 5–10% ukupnog teksta. Automatska procjena ovisi o pravilnim Heading stilovima.",
      "severity": "warning",
      "title": "Omjer Uvoda ili Zaključka odstupa od FPZG smjernice",
      "where": "Struktura rada",
    },
    {
      "category": "structure",
      "detail": "Nisu pouzdano prepoznati: Sveučilište u Zagrebu, Fakultet političkih znanosti, Zagreb i godina, vrsta rada. Vizualni raspored treba provjeriti ručno prema predlošku.",
      "severity": "warning",
      "title": "Naslovna stranica možda nije potpuna",
      "where": "Prva stranica",
    },
    {
      "category": "citations",
      "detail": "Dokument možda nema citatnica ili zapis odstupa od očekivanog obrasca. Provjeri ručno.",
      "severity": "info",
      "title": "Nisu prepoznate autor–godina citatnice",
      "where": "",
    },
    {
      "category": "citations",
      "detail": "Kasapović 2014",
      "severity": "warning",
      "title": "Neki izvori iz literature nisu pronađeni u tekstu",
      "where": "",
    },
  ],
  "profile": "FPZG · prijediplomska Politologija · završni rad",
  "profileFingerprint": null,
  "profileStatus": "verified",
  "score": 91,
  "stats": {
    "characters": 38650,
    "citations": 0,
    "dominantFont": "Times New Roman",
    "dominantFootnoteFont": null,
    "dominantFootnoteSize": null,
    "dominantFootnoteSpacing": null,
    "dominantSize": "12",
    "dominantSpacing": "1.5",
    "footnoteMarkers": 0,
    "footnoteWords": 0,
    "footnotes": 0,
    "headings": 6,
    "images": 0,
    "officialChars": null,
    "officialWords": 5824,
    "paragraphs": 106,
    "references": 1,
    "sections": 1,
    "storedPages": null,
    "tables": 0,
    "tocEntries": 0,
    "words": 5852,
  },
}
`;

exports[`Sinteticki golden korpus (stabilan rezultat enginea) > stabilan rezultat: pravo-integrirani-fusnote 1`] = `
{
  "checks": [
    {
      "category": "formatting",
      "detail": "Times New Roman (100% analiziranog teksta)",
      "earned": 8,
      "max": 8,
      "status": "pass",
      "title": "Dominantni font",
    },
    {
      "category": "formatting",
      "detail": "12 pt",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Veličina osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "1.50",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Prored osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Informativno: brojčane margine nisu potvrđene kao obvezno pravilo za ovaj profil",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Margine dokumenta",
    },
    {
      "category": "formatting",
      "detail": "both",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Poravnanje osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "7 Word fusnota",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Automatske fusnote",
    },
    {
      "category": "formatting",
      "detail": "font Times New Roman · 12 pt · prored — · poravnanje default",
      "earned": 2,
      "max": 6,
      "status": "warn",
      "title": "Oblikovanje fusnota",
    },
    {
      "category": "formatting",
      "detail": "Razmak prije/poslije nije izričito zapisan u analiziranim stilovima; nema bodovnog kažnjavanja",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Razmak prije i poslije odlomka",
    },
    {
      "category": "formatting",
      "detail": "Razmak prije/poslije nije izričito zapisan u analiziranim stilovima; nema bodovnog kažnjavanja",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Razmak prije i poslije fusnota",
    },
    {
      "category": "formatting",
      "detail": "0 oznaka · 0 ukošenih · 0 uz pogrešnu stranu zareza/točke",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Položaj i stil oznaka fusnota",
    },
    {
      "category": "structure",
      "detail": "6 naslova prepoznato",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Hijerarhija naslova",
    },
    {
      "category": "structure",
      "detail": "3 od 3 naslova odstupa od očekivanog velikog slova/bold/italic obrasca",
      "earned": 3,
      "max": 6,
      "status": "warn",
      "title": "Oblikovanje naslova po razinama",
    },
    {
      "category": "structure",
      "detail": "Prepoznato je dosljedno numeriranje u skladu s razinom naslova",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Numeriranje naslova",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni naslovi izričito poravnani drugačije od lijevog ruba",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Poravnanje naslova slijeva",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni naslovi dublji od 3 razine",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Dubina decimalnog numeriranja",
    },
    {
      "category": "structure",
      "detail": "Sadržaj ili TOC polje je pronađeno",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Sadržaj dokumenta",
    },
    {
      "category": "structure",
      "detail": "Informativno — ne ulazi u službenu ocjenu. TOC polje je možda prisutno, ali spremljene stavke sadržaja nisu dostupne za pouzdanu provjeru",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Detalji automatskog sadržaja",
    },
    {
      "category": "structure",
      "detail": "PAGE polje nije pronađeno",
      "earned": 0,
      "max": 4,
      "status": "pass",
      "title": "Brojevi stranica",
    },
    {
      "category": "structure",
      "detail": "Uvod, zaključak i literatura su prepoznati",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Osnovni dijelovi rada",
    },
    {
      "category": "structure",
      "detail": "Prepoznati su svi automatizirano provjerljivi dijelovi profila",
      "earned": 7,
      "max": 7,
      "status": "pass",
      "title": "Dijelovi verificiranog profila",
    },
    {
      "category": "structure",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Word nije spremio pouzdan broj stranica; profil: oko 30. Provjeri broj u otvorenom dokumentu.",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Opseg u stranicama",
    },
    {
      "category": "structure",
      "detail": "Mogu nedostajati: Sveučilište u Zagrebu, godina, vrsta rada, mentor",
      "earned": 2,
      "max": 4,
      "status": "warn",
      "title": "Elementi naslovne stranice",
    },
    {
      "category": "structure",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Nije pronađen pouzdan prijelom prve stranice; redoslijed treba provjeriti vizualno",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Redoslijed elemenata naslovnice",
    },
    {
      "category": "structure",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Nije pronađen pouzdan prijelom prve stranice; vizualni raspored nije bodovan",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Raspored naslovne stranice",
    },
    {
      "category": "structure",
      "detail": "6 zahtjeva nije moguće pouzdano provjeriti bez Wordova prijeloma stranica i stručnog pregleda",
      "earned": 3,
      "max": 3,
      "status": "warn",
      "title": "Zahtjevi za ručnu završnu provjeru",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni očiti ručno oblikovani naslovi",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Uporaba Word stilova naslova",
    },
    {
      "category": "citations",
      "detail": "7 numeriranih Word fusnota",
      "earned": 7,
      "max": 7,
      "status": "pass",
      "title": "Pravne fusnote",
    },
    {
      "category": "citations",
      "detail": "6 od 7 fusnota razvrstano je u prepoznatljive vrste izvora",
      "earned": 3,
      "max": 4,
      "status": "pass",
      "title": "Klasifikacija pravnih izvora",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očiti nedostajući elementi u prvim navodima",
      "earned": 7,
      "max": 7,
      "status": "pass",
      "title": "Potpunost prvog navođenja",
    },
    {
      "category": "citations",
      "detail": "1 op. cit. navoda ima razrješivu poveznicu",
      "earned": 8,
      "max": 8,
      "status": "pass",
      "title": "op. cit. → prvo navođenje",
    },
    {
      "category": "citations",
      "detail": "1 Ibid. navoda slijedi razrješivu prethodnu bilješku",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Slijed Ibid.",
    },
    {
      "category": "citations",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Kratica id. nije korištena",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Kratica id. u istoj bilješci",
    },
    {
      "category": "citations",
      "detail": "1 pravnih akata · 1 uvedenih kratica",
      "earned": 7,
      "max": 7,
      "status": "pass",
      "title": "Propisi i uvedene kratice",
    },
    {
      "category": "citations",
      "detail": "1 odluka · 0 s mogućim nedostajućim elementima",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Sudska praksa",
    },
    {
      "category": "citations",
      "detail": "0 izvora iz fusnota bez podudaranja · 0 bibliografskih jedinica bez punog navoda u fusnotama",
      "earned": 8,
      "max": 8,
      "status": "pass",
      "title": "Fusnote ↔ bibliografija",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očito nepotpuni zapisi",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Potpunost bibliografskih zapisa",
    },
    {
      "category": "citations",
      "detail": "Odabrani profil ne zahtijeva datum pristupa za svaki URL",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Datumi pristupa mrežnim izvorima",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 tablica · 0 prepoznatih naslova",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Naslovi tablica",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 grafičkih elemenata · 0 prepoznatih naslova",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Naslovi slika i grafikona",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Nisu pronađene očito neispravne poveznice",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Oblik poveznica",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 praznih odlomaka (0%)",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Prazni odlomci",
    },
  ],
  "issues": [
    {
      "category": "structure",
      "detail": "Vizualno provjeriti naslovnu stranicu, naziv katedre, kolegija, mentora, mjesto i godinu. • Sadržaj treba biti automatski generiran i ažuriran prije predaje. • Naslove treba numerirati po razinama; naslov 1. razine tiskanim slovima, 2. razine podebljano, 3. razine podebljano i kurzivom. • Provjeriti je li prvo navođenje svakog izvora potpuno, a ponovljeno navođenje dosljedno prema op. cit., ibid. i id. pravilima. • Kod zakona i drugih pravnih akata treba pri prvom navođenju navesti puni naziv službenog glasila i relevantne brojeve objava. • Upute mentora i posebne upute katedre imaju prednost kada su strože ili detaljnije.",
      "severity": "info",
      "title": "Ručna završna provjera verificiranog profila",
      "where": "Službene upute",
    },
    {
      "category": "formatting",
      "detail": "Očekuje se Times New Roman 10, prored 1, razmak prije/poslije 0 i obostrano poravnanje.",
      "severity": "warning",
      "title": "Fusnote odstupaju od pravnog profila",
      "where": "Fusnote",
    },
    {
      "category": "structure",
      "detail": "odlomak 4: 1. Uvod; odlomak 14: 2. Razrada; odlomak 45: 3. Zaključak",
      "severity": "warning",
      "title": "Naslovi ne prate profil razina",
      "where": "Naslovi",
    },
    {
      "category": "structure",
      "detail": "Provjeri zaglavlja i podnožja te umetni Word PAGE polje.",
      "severity": "error",
      "title": "Nisu pronađeni automatski brojevi stranica",
      "where": "",
    },
    {
      "category": "structure",
      "detail": "Nisu pouzdano prepoznati: Sveučilište u Zagrebu, godina, vrsta rada, mentor. Vizualni raspored treba provjeriti ručno prema predlošku.",
      "severity": "warning",
      "title": "Naslovna stranica možda nije potpuna",
      "where": "Prva stranica",
    },
  ],
  "profile": "Pravni fakultet · integrirani studij Pravo · diplomski rad",
  "profileFingerprint": null,
  "profileStatus": "verified",
  "score": 91,
  "stats": {
    "characters": 18644,
    "citations": 7,
    "dominantFont": "Times New Roman",
    "dominantFootnoteFont": "Times New Roman",
    "dominantFootnoteSize": "12",
    "dominantFootnoteSpacing": null,
    "dominantSize": "12",
    "dominantSpacing": "1.5",
    "footnoteMarkers": 0,
    "footnoteWords": 71,
    "footnotes": 7,
    "headings": 6,
    "images": 0,
    "officialChars": null,
    "officialWords": null,
    "paragraphs": 56,
    "references": 2,
    "sections": 1,
    "storedPages": null,
    "tables": 0,
    "tocEntries": 0,
    "words": 2826,
  },
}
`;

exports[`Sinteticki golden korpus (stabilan rezultat enginea) > stabilan rezultat: pravo-integrirani-struktura 1`] = `
{
  "checks": [
    {
      "category": "formatting",
      "detail": "Times New Roman (100% analiziranog teksta)",
      "earned": 8,
      "max": 8,
      "status": "pass",
      "title": "Dominantni font",
    },
    {
      "category": "formatting",
      "detail": "12 pt",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Veličina osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "1.50",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Prored osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Informativno: brojčane margine nisu potvrđene kao obvezno pravilo za ovaj profil",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Margine dokumenta",
    },
    {
      "category": "formatting",
      "detail": "both",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Poravnanje osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Nije pronađena nijedna Word fusnota",
      "earned": 0,
      "max": 4,
      "status": "fail",
      "title": "Automatske fusnote",
    },
    {
      "category": "formatting",
      "detail": "font nije očitan · — pt · prored — · poravnanje —",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Oblikovanje fusnota",
    },
    {
      "category": "formatting",
      "detail": "Razmak prije/poslije nije izričito zapisan u analiziranim stilovima; nema bodovnog kažnjavanja",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Razmak prije i poslije odlomka",
    },
    {
      "category": "formatting",
      "detail": "Razmak prije/poslije nije izričito zapisan u analiziranim stilovima; nema bodovnog kažnjavanja",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Razmak prije i poslije fusnota",
    },
    {
      "category": "formatting",
      "detail": "0 oznaka · 0 ukošenih · 0 uz pogrešnu stranu zareza/točke",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Položaj i stil oznaka fusnota",
    },
    {
      "category": "structure",
      "detail": "6 naslova prepoznato",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Hijerarhija naslova",
    },
    {
      "category": "structure",
      "detail": "3 od 3 naslova odstupa od očekivanog velikog slova/bold/italic obrasca",
      "earned": 3,
      "max": 6,
      "status": "warn",
      "title": "Oblikovanje naslova po razinama",
    },
    {
      "category": "structure",
      "detail": "Prepoznato je dosljedno numeriranje u skladu s razinom naslova",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Numeriranje naslova",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni naslovi izričito poravnani drugačije od lijevog ruba",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Poravnanje naslova slijeva",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni naslovi dublji od 3 razine",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Dubina decimalnog numeriranja",
    },
    {
      "category": "structure",
      "detail": "Sadržaj ili TOC polje je pronađeno",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Sadržaj dokumenta",
    },
    {
      "category": "structure",
      "detail": "Informativno — ne ulazi u službenu ocjenu. TOC polje je možda prisutno, ali spremljene stavke sadržaja nisu dostupne za pouzdanu provjeru",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Detalji automatskog sadržaja",
    },
    {
      "category": "structure",
      "detail": "PAGE polje nije pronađeno",
      "earned": 0,
      "max": 4,
      "status": "pass",
      "title": "Brojevi stranica",
    },
    {
      "category": "structure",
      "detail": "Uvod, zaključak i literatura su prepoznati",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Osnovni dijelovi rada",
    },
    {
      "category": "structure",
      "detail": "Prepoznati su svi automatizirano provjerljivi dijelovi profila",
      "earned": 7,
      "max": 7,
      "status": "pass",
      "title": "Dijelovi verificiranog profila",
    },
    {
      "category": "structure",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Word nije spremio pouzdan broj stranica; profil: oko 30. Provjeri broj u otvorenom dokumentu.",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Opseg u stranicama",
    },
    {
      "category": "structure",
      "detail": "Mogu nedostajati: Sveučilište u Zagrebu, Pravni fakultet, Zagreb i godina, vrsta rada, mentor",
      "earned": 2,
      "max": 4,
      "status": "warn",
      "title": "Elementi naslovne stranice",
    },
    {
      "category": "structure",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Nije pronađen pouzdan prijelom prve stranice; redoslijed treba provjeriti vizualno",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Redoslijed elemenata naslovnice",
    },
    {
      "category": "structure",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Nije pronađen pouzdan prijelom prve stranice; vizualni raspored nije bodovan",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Raspored naslovne stranice",
    },
    {
      "category": "structure",
      "detail": "6 zahtjeva nije moguće pouzdano provjeriti bez Wordova prijeloma stranica i stručnog pregleda",
      "earned": 3,
      "max": 3,
      "status": "warn",
      "title": "Zahtjevi za ručnu završnu provjeru",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni očiti ručno oblikovani naslovi",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Uporaba Word stilova naslova",
    },
    {
      "category": "citations",
      "detail": "Fusnote nisu pronađene",
      "earned": 0,
      "max": 7,
      "status": "fail",
      "title": "Pravne fusnote",
    },
    {
      "category": "citations",
      "detail": "0 od 0 fusnota razvrstano je u prepoznatljive vrste izvora",
      "earned": 0,
      "max": 4,
      "status": "fail",
      "title": "Klasifikacija pravnih izvora",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očiti nedostajući elementi u prvim navodima",
      "earned": 7,
      "max": 7,
      "status": "pass",
      "title": "Potpunost prvog navođenja",
    },
    {
      "category": "citations",
      "detail": "0 op. cit. navoda ima razrješivu poveznicu",
      "earned": 8,
      "max": 8,
      "status": "pass",
      "title": "op. cit. → prvo navođenje",
    },
    {
      "category": "citations",
      "detail": "0 Ibid. navoda slijedi razrješivu prethodnu bilješku",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Slijed Ibid.",
    },
    {
      "category": "citations",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Kratica id. nije korištena",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Kratica id. u istoj bilješci",
    },
    {
      "category": "citations",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 pravnih akata · 0 uvedenih kratica",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Propisi i uvedene kratice",
    },
    {
      "category": "citations",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Sudska praksa nije prepoznata",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Sudska praksa",
    },
    {
      "category": "citations",
      "detail": "0 izvora iz fusnota bez podudaranja · 0 bibliografskih jedinica bez punog navoda u fusnotama",
      "earned": 8,
      "max": 8,
      "status": "pass",
      "title": "Fusnote ↔ bibliografija",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očito nepotpuni zapisi",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Potpunost bibliografskih zapisa",
    },
    {
      "category": "citations",
      "detail": "Odabrani profil ne zahtijeva datum pristupa za svaki URL",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Datumi pristupa mrežnim izvorima",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 tablica · 0 prepoznatih naslova",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Naslovi tablica",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 grafičkih elemenata · 0 prepoznatih naslova",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Naslovi slika i grafikona",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Nisu pronađene očito neispravne poveznice",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Oblik poveznica",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 praznih odlomaka (0%)",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Prazni odlomci",
    },
  ],
  "issues": [
    {
      "category": "structure",
      "detail": "Vizualno provjeriti naslovnu stranicu, naziv katedre, kolegija, mentora, mjesto i godinu. • Sadržaj treba biti automatski generiran i ažuriran prije predaje. • Naslove treba numerirati po razinama; naslov 1. razine tiskanim slovima, 2. razine podebljano, 3. razine podebljano i kurzivom. • Provjeriti je li prvo navođenje svakog izvora potpuno, a ponovljeno navođenje dosljedno prema op. cit., ibid. i id. pravilima. • Kod zakona i drugih pravnih akata treba pri prvom navođenju navesti puni naziv službenog glasila i relevantne brojeve objava. • Upute mentora i posebne upute katedre imaju prednost kada su strože ili detaljnije.",
      "severity": "info",
      "title": "Ručna završna provjera verificiranog profila",
      "where": "Službene upute",
    },
    {
      "category": "citations",
      "detail": "Pravni profil očekuje bibliografske i pravne izvore u numeriranim Word fusnotama.",
      "severity": "error",
      "title": "Nisu pronađene automatske fusnote",
      "where": "Fusnote",
    },
    {
      "category": "structure",
      "detail": "odlomak 4: 1. Uvod; odlomak 17: 2. Razrada; odlomak 58: 3. Zaključak",
      "severity": "warning",
      "title": "Naslovi ne prate profil razina",
      "where": "Naslovi",
    },
    {
      "category": "structure",
      "detail": "Provjeri zaglavlja i podnožja te umetni Word PAGE polje.",
      "severity": "error",
      "title": "Nisu pronađeni automatski brojevi stranica",
      "where": "",
    },
    {
      "category": "structure",
      "detail": "Nisu pouzdano prepoznati: Sveučilište u Zagrebu, Pravni fakultet, Zagreb i godina, vrsta rada, mentor. Vizualni raspored treba provjeriti ručno prema predlošku.",
      "severity": "warning",
      "title": "Naslovna stranica možda nije potpuna",
      "where": "Prva stranica",
    },
    {
      "category": "citations",
      "detail": "Odabrani profil očekuje automatski numerirane Word fusnote.",
      "severity": "error",
      "title": "Nema pravnih fusnota",
      "where": "Fusnote",
    },
    {
      "category": "citations",
      "detail": "Parser ne može pouzdano odrediti vrstu izvora za velik dio fusnota; potreban je ručni pregled.",
      "severity": "warning",
      "title": "Mnogo fusnota nije klasificirano",
      "where": "Legal Citation Engine",
    },
  ],
  "profile": "Pravni fakultet · integrirani studij Pravo · diplomski rad",
  "profileFingerprint": null,
  "profileStatus": "verified",
  "score": 84,
  "stats": {
    "characters": 24444,
    "citations": 0,
    "dominantFont": "Times New Roman",
    "dominantFootnoteFont": null,
    "dominantFootnoteSize": null,
    "dominantFootnoteSpacing": null,
    "dominantSize": "12",
    "dominantSpacing": "1.5",
    "footnoteMarkers": 0,
    "footnoteWords": 0,
    "footnotes": 0,
    "headings": 6,
    "images": 0,
    "officialChars": null,
    "officialWords": null,
    "paragraphs": 70,
    "references": 1,
    "sections": 1,
    "storedPages": null,
    "tables": 0,
    "tocEntries": 0,
    "words": 3706,
  },
}
`;
